# t2bc

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.rst  setup.cfg  setup.py
conda-recipes/t2bc/: bld.bat  build.sh  meta.yaml
ffi/: .gitignore  CMakeLists.txt  Makefile.linux  assembler.cpp  assembler.h  build.py
ffi/dummy/: CMakeLists.txt
t2bc/: _version.py  utils.py
t2bc/binding/: __init__.py  context.py  ffi.py
t2bc/tests/: __init__.py  test_assemble.py
